feat: implement enhanced wrestler filtering by alignment and gender
- Updated ShowTemplate entity and DTO to support gender constraints.
- Added database migrations for gender_constraint column.
- Implemented findAllFiltered in WrestlerService to encapsulate filtering logic.
- Enhanced ShowTemplateListView to allow configuring gender constraints.
- Added reactive alignment and gender filters to segment booking UI (ShowPlanningView and ShowDetailView).
- Updated AI Show Planner to respect template gender constraints.
- Added unit tests in WrestlerServiceTest for the new filtering logic.
- Updated existing tests to accommodate service and constructor changes.